# marco-bot

./: Cargo.toml  LICENSE.txt  README.md
marco/src/: environ.rs  lib.rs  main.rs
marco/src/bot/: base.rs
marco/src/bot/commands/: help.rs  reroll.rs
marco/src/openai/: relevance.rs  responder.rs
marco/src/personality/: character.rs  tag.rs
marco/src/util/: deque.rs  mod.rs
src/: lib.rs  main.rs  openai.rs
src/bot/: base.rs  commands.rs  message.rs  mod.rs  nicknames.rs  passive.rs
src/bot/commands/: help.rs  mod.rs  reroll.rs
src/openai/: mod.rs  reaction.rs  relevance.rs  responder.rs
src/personality/: base.rs  character.rs  mod.rs  quirk.rs  tag.rs  template.rs  trigger.rs
src/util/: deque.rs
